fixed all thing , following single responsibility properties and added authentication. and made an application runnable